--- a/packages.config
+++ b/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Azure.Mobile.Client" version="4.1.2" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net48" />
   <package id="sqlite-net-pcl" version="1.6.292" targetFramework="net48" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.13" targetFramework="net48" />
   <package id="SQLitePCLRaw.core" version="1.1.13" targetFramework="net48" />
